--- a/toolkit/QuestionOverfit/streamlit/requirements.txt
+++ b/toolkit/QuestionOverfit/streamlit/requirements.txt
@@ -1,6 +1,5 @@
 numpy==1.24.1
 pandas==2.2.0
 streamlit==1.31.0
-sqlalchemy==1.4.0
-psycopg2==2.9.9
-psycopg2-binary==2.9.9
+snowflake-snowpark-python==1.12.0
+
