--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 .idea
 pyrightconfig.json
 streamlit/VocabQuery/.streamlit/secrets.toml
+streamlit/QuestionOverfit/philo
+streamlit/QuestionOverfit/.DS_Store
+streamlit/.DS_Store
+.DS_Store
