--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ streamlit/QuestionOverfit/philo
 streamlit/QuestionOverfit/.DS_Store
 streamlit/.DS_Store
 .DS_Store
+streamlit/VocabQuery/.ipynb_checkpoints
