--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ streamlit/QuestionOverfit/.DS_Store
 streamlit/.DS_Store
 .DS_Store
 streamlit/VocabQuery/.ipynb_checkpoints
+streamlit/VocabQuery/add_vocab_equations.ipynb
