--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ streamlit/.DS_Store
 .DS_Store
 streamlit/VocabQuery/.ipynb_checkpoints
 streamlit/VocabQuery/add_vocab_equations.ipynb
+streamlit/Vocab2Math/add_vocab_equations.ipynb
+streamlit/Vocab2Math/.ipynb_checkpoints
+streamlit/Vocab2Math/.streamlit/secrets.toml
