--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ streamlit/VocabQuery/add_vocab_equations.ipynb
 streamlit/Vocab2Math/add_vocab_equations.ipynb
 streamlit/Vocab2Math/.ipynb_checkpoints
 streamlit/Vocab2Math/.streamlit/secrets.toml
+streamlit/VocabOverfit/.ipynb_checkpoints
+streamlit/VocabOverfit/add_vocab_equations.ipynb
