--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ streamlit/.DS_Store
 .DS_Store
 streamlit/VocabOverfit/.ipynb_checkpoints
 streamlit/VocabOverfit/add_vocab_equations.ipynb
+.streamlit/secrets.toml
