--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ streamlit/VocabOverfit/.ipynb_checkpoints
 streamlit/VocabOverfit/add_vocab_equations.ipynb
 ./streamlit/secrets.toml
 streamlit/VocabOverfit/add_vocab_equations.ipynb
+toolkit
