--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ streamlit/VocabOverfit/add_vocab_equations.ipynb
 .streamlit/secrets.toml
 streamlit/VocabOverfit/add_vocab_equations.ipynb
 toolkit
+setup.py
+streamlit/QuestionOverfit
